--- a/app/src/main/res/layout/activity_play_activity.xml
+++ b/app/src/main/res/layout/activity_play_activity.xml
@@ -4,37 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#02084f"
+    android:background="#50128E"
     tools:context=".PlayActivity">
 
-
- <TextView
-     android:id="@+id/scoreCount"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:layout_marginStart="20dp"
-     android:layout_marginTop="56dp"
-     android:text="@string/strScore"
-     android:textColor="#FFFFFF"
-     android:textSize="20sp"
-     android:textStyle="bold"
-     app:layout_constraintEnd_toStartOf="@+id/txtTime"
-     app:layout_constraintHorizontal_bias="0.175"
-     app:layout_constraintStart_toStartOf="parent"
-     app:layout_constraintTop_toTopOf="parent" />
 
  <TextView
      android:id="@+id/txtTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
-     android:layout_marginTop="44dp"
+     android:layout_marginTop="28dp"
      android:text="@string/strTime"
      android:textColor="#FFFFFF"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
-     app:layout_constraintHorizontal_bias="0.496"
+     app:layout_constraintHorizontal_bias="0.381"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,7 +27,7 @@
      android:id="@+id/cardView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
-     app:cardBackgroundColor="#02084f"
+     app:cardBackgroundColor="#50128E"
      app:cardCornerRadius="25dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
@@ -234,7 +219,7 @@
       app:layout_constraintEnd_toStartOf="@+id/prize5"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/prize3" >
+      app:layout_constraintTop_toBottomOf="@+id/prize3">
 
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
@@ -261,7 +246,7 @@
       app:layout_constraintEnd_toStartOf="@+id/prize6"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/prize4" >
+      app:layout_constraintTop_toBottomOf="@+id/prize4">
 
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
@@ -288,7 +273,7 @@
       app:layout_constraintEnd_toStartOf="@+id/prize7"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" >
+      app:layout_constraintTop_toTopOf="parent">
 
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
@@ -371,7 +356,7 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toEndOf="@+id/prize7"
-      app:layout_constraintTop_toTopOf="parent" >
+      app:layout_constraintTop_toTopOf="parent">
 
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
@@ -455,7 +440,7 @@
       app:layout_constraintEnd_toStartOf="@+id/prize10"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toEndOf="@+id/prize4"
-      app:layout_constraintTop_toTopOf="parent" >
+      app:layout_constraintTop_toTopOf="parent">
 
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
