--- a/app/src/main/res/layout/activity_fail.xml
+++ b/app/src/main/res/layout/activity_fail.xml
@@ -34,4 +34,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/failText" />
 
+    <TextView
+        android:id="@+id/prizeView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/restartButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/failText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
