--- a/app/src/main/res/layout/activity_play_activity.xml
+++ b/app/src/main/res/layout/activity_play_activity.xml
@@ -187,6 +187,7 @@
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:layout_marginTop="15dp"
+      android:tag="100"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -214,6 +215,7 @@
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:layout_marginBottom="40dp"
+      android:tag="50 000"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/prize5"
@@ -241,6 +243,7 @@
       android:id="@+id/prize3"
       android:layout_width="100dp"
       android:layout_height="50dp"
+      android:tag="75 000"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toTopOf="@+id/prize2"
       app:layout_constraintEnd_toStartOf="@+id/prize6"
@@ -268,6 +271,7 @@
       android:id="@+id/prize4"
       android:layout_width="100dp"
       android:layout_height="50dp"
+      android:tag="100 000"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toTopOf="@+id/prize3"
       app:layout_constraintEnd_toStartOf="@+id/prize7"
@@ -296,6 +300,7 @@
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:layout_marginBottom="40dp"
+      android:tag="600 000"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -323,6 +328,7 @@
       android:id="@+id/prize9"
       android:layout_width="100dp"
       android:layout_height="50dp"
+      android:tag="800 000"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toTopOf="@+id/prize8"
       app:layout_constraintEnd_toEndOf="parent"
@@ -350,6 +356,7 @@
       android:id="@+id/prize10"
       android:layout_width="100dp"
       android:layout_height="50dp"
+      android:tag="1 000 000"
       app:cardBackgroundColor="#FFD500"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toTopOf="@+id/prize9"
@@ -381,6 +388,7 @@
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:layout_marginBottom="40dp"
+      android:tag="200 000"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/prize8"
@@ -408,6 +416,7 @@
       android:id="@+id/prize6"
       android:layout_width="100dp"
       android:layout_height="50dp"
+      android:tag="300 000"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toTopOf="@+id/prize5"
       app:layout_constraintEnd_toStartOf="@+id/prize9"
@@ -435,6 +444,7 @@
       android:id="@+id/prize7"
       android:layout_width="100dp"
       android:layout_height="50dp"
+      android:tag="400 000"
       app:cardCornerRadius="10dp"
       app:layout_constraintBottom_toTopOf="@+id/prize6"
       app:layout_constraintEnd_toStartOf="@+id/prize10"
